Configurando index y estilos

--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>villaema.es</title>
-  
- 	<link rel="stylesheet" href="css/style.css"> 
+    <title>Tatiana Villa</title>
+    <link rel="stylesheet" href="css/style.css"> 
+	<script type="text/javascript" src="codigo.js"></script>
 </head>
 
 <body>
-
     <div class="cabecera">
-        <h1>villaema.es</h1>
-        <div class="menu">
-            <ul>
-                <li id='tatiana'>   <a href="tatiana-villa/curriculum/index.html">Tatiana Villa </a></li>  
-                <li id='catolico'>  <a href="recursos-catolicos/index.html">Recursos Católicos</a></li>    
- <!--               <li id='dam'>       <a href="dam/index.php">DAM</a></li>            
-                <li id='inmo'>      <a href="CRMInmobiliario/index.html">Inmobiliaria</a></li>     
-                --> 
-            </ul>
-        </div>
-    </div>
+		<img src="img/cabecera.jpg" alt="Logo de CRM Inmobiliario">
+        <h1>Tatiana Villa</h1>
+        <h2 id="subtitulo">Desarrollador de aplicaciones informáticas</h2>
+        <h3 id="fecha">fecha</h2>
+	</div>
+
+	<div class="menu">
+		<ul>
+			<li class="nav-item"><a class="menu-principal" href='index.html'>Inicio</a></li>
+			<li class="nav-item"><a class="menu-principal" aria-current="page" href="sobre-mi/index.html">Sobre mi</a></li>
+			<li class="nav-item"><a class="menu-principal" aria-current="page" href="proyectos/index.html">Proyectos</a></li>
+            <li class="nav-item"><a class="menu-principal" aria-current="page" href="habilidades/index.html">Habilidades</a></li>
+            <li class="nav-item"><a class="menu-principal" aria-current="page" href="contacto/index.html">Contacto</a></li>
+		</ul>
+	</div>
+
 	<div class="cuerpo">
-        <p>Soy un desarrollador de aplicaciones informáticas apasionado y altamente capacitado, listo para impulsar el éxito de tu empresa con mi experiencia y destrezas excepcionales. A continuación, te presento algunas de las razones por las cuales soy la elección ideal:</p>
+       <p>Soy un desarrollador de aplicaciones informáticas apasionado y altamente capacitado, listo para impulsar el éxito de tu empresa con mi experiencia y destrezas excepcionales. A continuación, te presento algunas de las razones por las cuales soy la elección ideal:</p>
         <ol>
             <li><strong>Experiencia Técnica Sólida:</strong> Mi experiencia en programación abarca una amplia gama de tecnologías, incluyendo HTML, CSS, JavaScript, PHP, y bases de datos MySQL. Mi capacidad para diseñar, desarrollar y mantener aplicaciones informáticas es inigualable.</li>
             <li><strong>Solucionador de Problemas:</strong> Me encanta enfrentar desafíos técnicos y soy un solucionador de problemas intrépido. Encuentro soluciones creativas para los obstáculos que se presentan, lo que garantiza que los proyectos se completen de manera eficiente y efectiva.</li>
@@ -39,3 +43,11 @@
 	</div>
 </body>
 
+<footer>
+    <div class="footer">
+        <span id="copyright">
+			&copy; <span id="annoFooter"> </span>Tatiana Villa Ema
+		</span>
+    </div>
+</footer>
+</html>
