Reestructurando el proyecto

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tatiana Villa</title>
-    <link rel="stylesheet" href="css/style.css"> 
-	<script type="text/javascript" src="codigo.js"></script>
+    <title>Tatiana Villa - Sobre mí</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="codigo.js"></script>
 </head>
 
 <body>
     <div class="cabecera">
-		<img src="img/cabecera.jpg" alt="Logo de CRM Inmobiliario">
+        <img src="img/cabecera.jpg" alt="Logo de CRM Inmobiliario">
         <h1>Tatiana Villa</h1>
         <h2 id="subtitulo">Desarrollador de aplicaciones informáticas</h2>
-        <h3 id="fecha">fecha</h2>
-	</div>
+        <h3 id="fecha">fecha</h3>
+    </div>
 
     <iframe src="menu.html" frameborder="0" width="100%" height="50px"></iframe>
-    
+
     <div class="cuerpo">
         <div class="parrafo">
-            <h3>¡Hola! Soy Tatiana, desarrolladora de aplicaciones informáticas con una  sólida formación y años de experiencia en el desarrollo de software</h3>
+            <h3>¡Hola! Soy Tatiana, desarrolladora de aplicaciones informáticas con una sólida formación y años de experiencia en el desarrollo de software.</h3>
             <p>Mi enfoque se centra en crear soluciones tecnológicas eficientes y escalables que no solo cumplan con los requisitos del cliente, sino que también excedan sus expectativas.</p>
             <p>Desde la conceptualización hasta la implementación y el mantenimiento, me comprometo a ofrecer un trabajo de calidad, a tiempo y dentro del presupuesto.</p>
             <p>Si estás buscando un colaborador creativo, dedicado y orientado a resultados para tu próximo proyecto, ¡no busques más! Estoy aquí para convertir tus ideas en realidad.</p>
@@ -30,8 +30,8 @@
         </div>
 
         <div class="parrafo">
-            <h3>Experiencia técnica solida</h3>
-            <p>Mi experiencia en programación abarca una amplia gama de tecnologías, incluyendo Administración de sistemas Linux, Java, MySQL HTML, CSS, JavaScript, PHP. Mi capacidad para diseñar, desarrollar y mantener aplicaciones informáticas es inigualable.</p>
+            <h3>Experiencia técnica sólida</h3>
+            <p>Mi experiencia en programación abarca una amplia gama de tecnologías, incluyendo Administración de sistemas Linux, Java, MySQL, HTML, CSS, JavaScript y PHP. Mi capacidad para diseñar, desarrollar y mantener aplicaciones informáticas es incomparable.</p>
         </div>
 
         <div class="parrafo">
@@ -40,32 +40,32 @@
         </div>
 
         <div class="parrafo">
-            <h3>Desarrollo Web de Calidad</h3>
+            <h3>Desarrollo web de calidad</h3>
             <p>Mi enfoque en la calidad del código y la usabilidad garantiza que las aplicaciones que desarrollo sean seguras, eficientes y atractivas. Los usuarios finales disfrutarán de una experiencia excepcional.</p>
         </div>
-        
+
         <div class="parrafo">
-            <h3>Habilidades Interpersonales</h3>
+            <h3>Habilidades interpersonales</h3>
             <p>Además de mis habilidades técnicas, soy un comunicador eficaz y un solucionador de problemas colaborativo. Estoy comprometido con el trabajo en equipo y siempre estoy dispuesto a colaborar con otros para lograr los objetivos del proyecto.</p>
         </div>
 
         <div class="parrafo">
-            <h3>Aprendizaje Continuo</h3>
+            <h3>Aprendizaje continuo</h3>
             <p>La tecnología avanza rápidamente, y estoy comprometido con el aprendizaje continuo. Estoy dispuesto a mantenerme actualizado con las últimas tendencias y tecnologías, lo que garantiza que nuestras aplicaciones estén siempre a la vanguardia.</p>
         </div>
 
         <div class="parrafo">
-            <h3>En Resumen</h3>
+            <h3>En resumen</h3>
             <p>Mi combinación de experiencia técnica, habilidades interpersonales y mi enfoque en la calidad me convierten en un candidato excepcional para cualquier proyecto de desarrollo de aplicaciones informáticas. Estoy emocionado de poner mis habilidades al servicio de tu equipo y llevar tus proyectos al siguiente nivel.</p>
             <p>¡Estoy lista para embarcarme en nuevos desafíos y contribuir al éxito de tu empresa!</p>
-	</div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer">
+            <span id="copyright">&copy; <span id="annoFooter"></span>Tatiana Villa Ema</span>
+        </div>
+    </footer>
 </body>
 
-<footer>
-    <div class="footer">
-        <span id="copyright">
-			&copy; <span id="annoFooter"> </span>Tatiana Villa Ema
-		</span>
-    </div>
-</footer>
 </html>
