Estructurando todas las paginas y el menu

--- a/habilidades.html
+++ b/habilidades.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tatiana Villa</title>
-    <link rel="stylesheet" href="css/style.css"> 
-	<script type="text/javascript" src="codigo.js"></script> 
+    <title>Tatiana Villa - Habilidades</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="codigo.js"></script>
 </head>
 
 <body>
     <div class="cabecera">
-		<img src="img/cabecera.jpg" alt="Logo de CRM Inmobiliario">
+        <img src="img/cabecera.jpg" alt="Logo de CRM Inmobiliario">
         <h1>Tatiana Villa</h1>
         <h2 id="subtitulo">Desarrollador de aplicaciones informáticas</h2>
-        <h3 id="fecha">fecha</h3> 
-	</div>
-    <div class="menu"> 
+        <h3 id="fecha">fecha</h3>
+    </div>
+    <div class="menu">
         <ul>
             <li><a id="menu1" href='index.html'>Inicio</a></li>
             <li><a id="menu2" href="sobre-mi.html">Sobre mi</a></li>
             <li><a id="menu3" href="proyectos.html">Proyectos</a></li>
             <li><a id="menu4" href="habilidades.html">Habilidades</a></li>
             <li><a id="menu5" href="contacto.html">Contacto</a></li>
-
         </ul>
     </div>
-
     <div class="cuerpo">
-        <div class="parrafo">
-            <h3> 👋 Hola, mi nombre es Tatiana Villa</h3>
-        </div>
-
         <div class="parrafo">
             <h3>👀 ¿Que se hacer?</h3>
             <ul>
@@ -60,28 +53,6 @@
             <p>Desarrollo de aplicaciones para moviles</p>
             <p>Unity</p>
         </div>
-
-        <div class="parrafo">
-            <h3>Me gustaria colaborar en proyectos de desarrollo WEB y/o Aplicaciones en Java</h3>
-        </div>
-
-        <div class="parrafo">
-            <h3>Conoce mi experiencia y formación en LinkedIn</h3>
-            <a href="https://www.linkedin.com/in/tatvil/?tab">LinkedIn</a>
-        </div>
-
-        <div class="parrafo">
-            <h3>📫 Contacto</h3>
-            <p>📫 Puedes contactar conmigo mediante correo electrónico <a href="mailto:tatiana@villaema.es">tatiana@villaema.es</a></p>
-        </div>
-    </div> <!-- Corrección: Agregada la etiqueta de cierre </div> para la sección del cuerpo -->
-
-<footer>
-    <div class="footer">
-        <span id="copyright">
-			&copy; <span id="annoFooter"> </span>Tatiana Villa Ema
-		</span>
     </div>
-</footer>
 </body>
 </html>
