--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/menu.css">
+</head>
+<body>
     <div class="menu">
         <ul>
             <li class="nav-item"><a class="menu-principal" href='index.html'>Inicio</a></li>
@@ -8,3 +16,6 @@
             <li class="nav-item"><a class="menu-principal" href="contacto.html">Contacto</a></li>
         </ul>
     </div>
+</body>
+</html>
+
