--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -18,8 +18,16 @@
         <h3 id="fecha">fecha</h3>
     </div>
 
-    <iframe src="menu.html" frameborder="0" width="100%" height="50px"></iframe>
-
+    <div class="menu">
+        <ul>
+            <li class="nav-item"><a class="menu-principal" href='index.html'>Inicio</a></li>
+            <li class="nav-item"><a class="menu-principal" href="sobre-mi.html">Sobre mi</a></li>
+            <li class="nav-item"><a class="menu-principal" href="proyectos.html">Proyectos</a></li>
+            <li class="nav-item"><a class="menu-principal" href="habilidades.html">Habilidades</a></li>
+            <li class="nav-item"><a class="menu-principal" href="contacto.html">Contacto</a></li>
+        </ul>
+    </div>
+    
     <div class="cuerpo">
         <div class="parrafo">
             <h3>¡Hola! Soy Tatiana, desarrolladora de aplicaciones informáticas con una sólida formación y años de experiencia en el desarrollo de software.</h3>
