--- a/contacto.html
+++ b/contacto.html
@@ -1,54 +1,94 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tatiana Villa</title>
-    <link rel="stylesheet" href="css/style.css"> 
-	<script type="text/javascript" src="codigo.js"></script> 
-</head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tatiana Villa - Desarrolladora de Aplicaciones Multiplataforma</title>
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- FontAwesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Meta tags para SEO -->
+    <meta name="description" content="Curriculum Vitae de Tatiana Villa, desarrolladora y diseñadora web especializada en aplicaciones multiplataforma.">
+    <meta name="keywords" content="Tatiana Villa, curriculum, desarrolladora web, diseñadora web, DAM, tecnología, programación">
+    <meta name="author" content="Tatiana Villa">
+    
+    <!-- Estilos personalizados -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- JavaScript personalizado -->
+    <script type="text/javascript" src="codigo.js"></script>
+</head>
 <body>
-    <div class="cabecera">
-		<img src="img/cabecera.jpg" alt="Imagen de cabecera">
+    <div class="container text-center mt-5">
         <h1>Tatiana Villa</h1>
-        <h2 id="subtitulo">Desarrollador de aplicaciones informáticas</h2>
-        <h3 id="fecha">fecha</h3> 
-	</div>
-    <div class="menu"> 
-        <ul>
-            <li><a id="menu1" href='index.html'>Inicio</a></li>
-            <li><a id="menu2" href="sobre-mi.html">Sobre mi</a></li>
-            <li><a id="menu3" href="proyectos.html">Proyectos</a></li>
-            <li><a id="menu4" href="habilidades.html">Habilidades</a></li>
-            <li><a id="menu5" href="contacto.html">Contacto</a></li>
-        </ul>
+        <h2><small>Desarrolladora de Aplicaciones Multiplataforma</small></h2>
+        <div class="contact-links mt-3">
+            <a href="mailto:tatiana@villaema.es" aria-label="Correo Electrónico"><i class="fas fa-envelope"></i> tatiana@villaema.es</a> |
+            <a href="https://github.com/tatvil" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i> GitHub</a> | 
+            <a href="https://www.linkedin.com/in/tatvil/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        </div>
     </div>
-    <div class="cuerpo">
+
+    <nav class="menu mt-5">
+        <ul class="nav justify-content-center">
+            <li class="nav-item"><a id="menu1" class="nav-link" href="index.html">Inicio</a></li>
+            <li class="nav-item"><a id="menu2" class="nav-link" href="sobre-mi.html">Sobre mí</a></li>
+            <li class="nav-item"><a id="menu3" class="nav-link" href="proyectos.html">Proyectos</a></li>
+            <li class="nav-item"><a id="menu4" class="nav-link" href="habilidades.html">Habilidades</a></li>
+            <li class="nav-item"><a id="menu5" class="nav-link" href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+
+    <div class="container cuerpo mt-4">
         <section class="contacto">
             <div class="parrafo">
-            <h2>¡Ponte en contacto conmigo!</h2>
-            <p>¿Tienes alguna pregunta o proyecto en mente? No dudes en enviarme un mensaje.</p>
-            <form action="#" method="POST">
-                <div class="form-group">
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombre" name="nombre" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Correo electrónico:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="mensaje">Mensaje:</label>
-                    <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
-                </div>
-                <button type="submit">Enviar mensaje</button>
-            </form>
-        </div>
+                <h2>¡Ponte en contacto conmigo!</h2>
+                <p>¿Tienes alguna pregunta o proyecto en mente? No dudes en enviarme un mensaje.</p>
+                <form action="#" method="POST">
+                    <div class="form-group">
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" id="nombre" name="nombre" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Correo electrónico:</label>
+                        <input type="email" id="email" name="email" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="mensaje">Mensaje:</label>
+                        <textarea id="mensaje" name="mensaje" rows="4" class="form-control" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar mensaje</button>
+                </form>
+            </div>
         </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Tatiana Villa</p>
+    </div>
+
+    <footer class="footer mt-5 text-center">
+        <div>
+            <span id="copyright">
+                &copy; <span id="annoFooter"></span> Tatiana Villa Ema
+            </span>
+        </div>
     </footer>
+
+    <!-- Scripts -->
+    <script>
+        // Actualizar el año en el footer automáticamente
+        document.getElementById('annoFooter').textContent = new Date().getFullYear();
+    </script>
+
+    <!-- Librerías de JS externas -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
