--- a/proyectos.html
+++ b/proyectos.html
@@ -5,58 +5,152 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tatiana Villa - Proyectos</title>
+    <title>Tatiana Villa</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="description" content="Proyectos de Tatiana Villa, desarrolladora y diseñadora web.">
+    <meta name="keywords" content="Tatiana Villa, proyectos, desarrolladora web, diseñadora web, tecnología, DAM, desarrollo de aplicaciones multiplataforma">
+    <meta name="author" content="Tatiana Villa">
+
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="codigo.js"></script>
 </head>
 
 <body>
-    <div class="cabecera">
-        <img src="img/cabecera.jpg" alt="Logo de CRM Inmobiliario">
-        <h1>Tatiana Villa</h1>
-        <h2 id="subtitulo">Desarrollador de aplicaciones informáticas</h2>
-        <h3 id="fecha">fecha</h3>
-    </div>
+    <div class="container">
+        <div class="text-center mt-5">
+            <h1>Tatiana Villa</h1>
+            <h2><small>Desarrollador de aplicaciones Multiplataforma</small></h2>
+            <div>
+                <a href="mailto:tatiana@villaema.es"><i class="fas fa-envelope"></i> tatiana@villaema.es</a> | 
+                <a href="https://github.com/tatvil"><i class="fab fa-github"></i> GitHub</a> | 
+                <a href="https://www.linkedin.com/in/tatvil/"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            </div>
+        </div>
 
-    <div class="menu">
-        <ul>
-            <li class="nav-item"><a class="menu-principal" href='index.html'>Inicio</a></li>
-            <li class="nav-item"><a class="menu-principal" href="sobre-mi.html">Sobre mi</a></li>
-            <li class="nav-item"><a class="menu-principal" href="proyectos.html">Proyectos</a></li>
-            <li class="nav-item"><a class="menu-principal" href="habilidades.html">Habilidades</a></li>
-            <li class="nav-item"><a class="menu-principal" href="contacto.html">Contacto</a></li>
-        </ul>
-    </div>
-    
-    <div class="cuerpo">
-        <div class="parrafo">
-            <h3>Proyectos Destacados</h3>
-            <p>Aquí encontrarás una lista de algunos de los proyectos en los que he trabajado:</p>
+        <div class="menu">
             <ul>
-                <li>Sistema de gestión de inventario para una cadena de tiendas minoristas</li>
-                <li>Plataforma de e-commerce para una empresa de moda local</li>
-                <li>Aplicación móvil de seguimiento de gastos personales</li>
-                <li>Sitio web de reserva de citas para un salón de belleza</li>
-                <li>Sistema de gestión de contenido para una empresa de medios</li>
+                <li><a id="menu1" href='index.html'>Inicio</a></li>
+                <li><a id="menu2" href="sobre-mi.html">Sobre mi</a></li>
+                <li><a id="menu3" href="proyectos.html">Proyectos</a></li>
+                <li><a id="menu4" href="habilidades.html">Habilidades</a></li>
+                <li><a id="menu5" href="contacto.html">Contacto</a></li>
             </ul>
         </div>
 
-        <div class="parrafo">
-            <h3>Detalles del Proyecto</h3>
-            <p>Cada proyecto presenta sus propios desafíos y soluciones. Si estás interesado en saber más sobre alguno de estos proyectos o ver ejemplos de mi trabajo, no dudes en contactarme.</p>
+        <div class="card">
+            <h6>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</h6>
         </div>
 
-        <div class="parrafo">
-            <h3>Trabajo en Equipo</h3>
-            <p>La mayoría de estos proyectos fueron realizados en equipos multidisciplinarios, donde colaboré estrechamente con diseñadores, desarrolladores front-end y otros profesionales para lograr los objetivos del proyecto.</p>
+        <div class="accordion mt-4" id="accordionExample">
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Páginas WEB <i class="fas fa-graduation-cap"></i>
+                        </button>
+                    </h5>
+                </div>
+
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <p><a href="https://www.tecnologia-facil.es">Tecnologia fácil</a></p>
+                        <p><a href="https://www.recursos-catolicos.es">Recursos católicos</a></p>
+                        <p><a href="https://www.inmorozas.es">InmoRozas - Servicios Inmobiliarios</a></p>
+                        <p><a href="https://www.huyo.es">Alojamiento turístico El Huyo</a></p>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header" id="headingTwo">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Aplicaciones para Android <i class="fas fa-project-diagram"></i>
+                        </button>
+                    </h5>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <p><a href="https://play.google.com/store/apps/details?id=es.villaema.tecnologiafacil">Tecnología fácil</a></p>
+                        <ul>
+                            <li><b>Desarrollo de aplicaciones:</b> He creado aplicaciones informáticas que ayudan a optimizar procesos y mejorar la experiencia del usuario.</li>
+                            <li><b>Proyectos web:</b> He desarrollado sitios web dinámicos y responsivos utilizando PHP, HTML, CSS y JavaScript, asegurando una experiencia de usuario fluida.</li>
+                            <li><b>WordPress:</b> He creado y gestionado sitios web en WordPress, personalizando temas y plugins para satisfacer las necesidades del cliente.</li>
+                            <li><b>Robótica:</b> He trabajado en proyectos de robótica con Arduino, aplicando mis conocimientos en programación y electrónica.</li>
+                            <li><b>Energía solar:</b> He organizado y gestionado proyectos relacionados con la energía solar fotovoltaica, combinando mis habilidades técnicas con la sostenibilidad.</li>
+                            <li><b>Redes:</b> He diseñado y administrado redes departamentales, asegurando una conectividad eficiente y segura.</li>
+                            <li><b>DevOps:</b> He implementado prácticas de DevOps para mejorar la colaboración y la eficiencia en el desarrollo de software.</li>
+                        </ul>
+                        <p>Mi enfoque siempre está en crear soluciones efectivas que se alineen con las necesidades de los usuarios y del mercado.</p>
+                        <p>Más información en la pestaña de <a href="proyectos.html">Proyectos</a>.</p>
+                        <p>👨‍💻 Puedes encontrar mis proyectos en la pestaña de repositorios de <a href="https://github.com/tatvil?tab=repositories">GitHub</a>.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header" id="headingThree">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Habilidades <i class="fas fa-cogs"></i>
+                        </button>
+                    </h5>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <ul>
+                            <li>Desarrollo de aplicaciones informáticas</li>
+                            <li>Administrador de sistemas Unix</li>
+                            <li>Programación orientada a objetos con Java</li>
+                            <li>Desarrollo de aplicaciones WEB FrontEnd y BackEnd</li>
+                            <li>Robótica con Arduino</li>
+                            <li>Organización y proyectos de energía solar fotovoltaica</li>
+                            <li>Administración y diseño de redes departamentales</li>
+                            <li>Empresa e iniciativa emprendedora</li>
+                            <li>DevOps</li>
+                            <li>WordPress, Photoshop</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header" id="headingFour">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            Contacto <i class="fas fa-envelope"></i>
+                        </button>
+                    </h5>
+                </div>
+                <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <p>📫 Puedes contactar conmigo mediante correo electrónico <a href="mailto:tatiana@villaema.es">tatiana@villaema.es</a></p>
+                        <p>Puedes dejarme un mensaje en mi <a href="https://www.linkedin.com/in/tatvil/">LinkedIn</a></p>
+                        <p>Deja tus datos en el formulario de <a href="contacto.html">contacto</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <footer>
         <div class="footer">
-            <span id="copyright">&copy; <span id="annoFooter"></span>Tatiana Villa Ema</span>
+            <span id="copyright">
+                &copy; <span id="annoFooter"></span> Tatiana Villa Ema
+            </span>
         </div>
     </footer>
+
+    <script>
+        // Actualizar el año en el footer
+        document.getElementById('annoFooter').textContent = new Date().getFullYear();
+    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
