--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tatiana Villa</title>
+    <title>Tatiana Villa - Desarrolladora Full Stack & DevOps</title>
     <link rel="stylesheet" href="css/style.css"> 
-	<script type="text/javascript" src="codigo.js"></script> 
+    <script type="text/javascript" src="codigo.js"></script> 
 </head>
 
 <body>
     <div class="cabecera">
-		<img src="img/cabecera.jpg" alt="Logo de CRM Inmobiliario">
+        <img src="img/cabecera.jpg" alt="Logo Profesional" />
         <h1>Tatiana Villa</h1>
-        <h2 id="subtitulo">Desarrollador de aplicaciones informáticas</h2>
+        <h2 id="subtitulo">Desarrolladora Full Stack & Administradora de Sistemas</h2>
         <h3 id="fecha">fecha</h3> 
-	</div>
+    </div>
     
     <div class="menu"> 
         <ul>
             <li><a id="menu1" href='index.html'>Inicio</a></li>
-            <li><a id="menu2" href="sobre-mi.html">Sobre mi</a></li>
+            <li><a id="menu2" href="sobre-mi.html">Sobre mí</a></li>
             <li><a id="menu3" href="proyectos.html">Proyectos</a></li>
             <li><a id="menu4" href="habilidades.html">Habilidades</a></li>
             <li><a id="menu5" href="contacto.html">Contacto</a></li>
@@ -30,45 +30,40 @@
 
     <div class="cuerpo">
         <div class="parrafo">
-            <h3> 👋 Hola, mi nombre es Tatiana</h3>
-            <p>Esta página web esta realizada integramente con codigo: PHP, JavaScript, html, y CSS</p>
-            <p>Mi intencion es que veas mi portfolio, para que estés interesado en contratar mis servicios</p>
-            <p>Soy conciente de lo mucho que necesito mejorar esta pagina. Voy despacito, mejorando la web a ratitos, cuando no tengo que prestar servicios a terceros :)</p>
+            <h3> 👋 Hola, soy Tatiana</h3>
+            <p>Esta página web está desarrollada completamente en PHP, JavaScript, HTML y CSS.</p>
+            <p>Mi objetivo es que explores mi portfolio y consideres contratar mis servicios profesionales.</p>
+            <p>Estoy en constante mejora de esta página. A ratitos, cuando no estoy ayudando a otros, implemento nuevas funcionalidades y actualizo el contenido. ¡Gracias por tu visita!</p>
         </div>
 
         <div class="parrafo">
-            <h3>Sobre mi</h3>
+            <h3>Sobre mí</h3>
+            <p>Soy desarrolladora de aplicaciones y administradora de sistemas con más de 5 años de experiencia. Me especializo en la creación de soluciones tecnológicas para empresas, tanto en desarrollo web como en DevOps. He trabajado en proyectos que abarcan desde la programación orientada a objetos en Java hasta la administración de redes departamentales y robótica con Arduino.</p>
+        </div>
+
+        <div class="parrafo">
+            <h3>Proyectos Destacados</h3>
+            <p>Aquí te presento algunos de mis proyectos más relevantes:</p>
             <ul>
-                <li>Desarrollo de aplicaciones informáticas</li>
-                <li>Administrador de sistemas Unix</li>
-                <li>Programación orientada a objetos con Java</li>
-                <li>Desarrollo de aplicaciones WEB FrontEnd y BackEnd</li>
-                <li>Robótica con Arduino</li>
-                <li>Organización y proyectos de energía solar fotovoltaica</li>
-                <li>Administración y diseño de redes departamentales</li>
-                <li>Empresa e iniciativa emprendedora</li>
-                <li>DevOps</li>
-                <li>Wordpress, Photoshop</li>
+                <li><strong>Proyecto CRM Inmobiliario:</strong> Sistema de gestión para empresas inmobiliarias. (Enlace a GitHub)</li>
+                <li><strong>Sistema de Energía Solar Fotovoltaica:</strong> Proyecto de optimización energética con tecnologías IoT. (Enlace a GitHub)</li>
+                <li><strong>Aplicación Web Full Stack:</strong> Plataforma de e-commerce con Node.js y MongoDB. (Enlace a GitHub)</li>
             </ul>
-        </div>
-
-        <div class="parrafo">
-            <h3>Proyectos</h3>
-            <p>👨‍💻 Puedes encontrar mis proyectos en la pestaña repositorios de <a href="https://github.com/tatvil?tab=repositories">Github</a></p>
+            <p>👨‍💻 Puedes ver todos mis proyectos en <a href="https://github.com/tatvil?tab=repositories">mi GitHub</a>.</p>
         </div>
 
         <div class="parrafo">
             <h3>Habilidades</h3>
-            <li>Desarrollo de aplicaciones informáticas</li>
-            <li>Administrador de sistemas Unix</li>
-            <li>Programación orientada a objetos con Java</li>
-            <li>Desarrollo de aplicaciones WEB FrontEnd y BackEnd</li>
-            <li>Robótica con Arduino</li>
-            <li>Organización y proyectos de energía solar fotovoltaica</li>
-            <li>Administración y diseño de redes departamentales</li>
-            <li>Empresa e iniciativa emprendedora</li>
-            <li>DevOps</li>
-            <li>Wordpress, Photoshop</li>
+            <ul>
+                <li>Desarrollo de aplicaciones informáticas (Java, Python, PHP)</li>
+                <li>Administración de sistemas Unix/Linux</li>
+                <li>Desarrollo FrontEnd (HTML5, CSS3, JavaScript, React)</li>
+                <li>Desarrollo BackEnd (Node.js, PHP, MySQL)</li>
+                <li>Automatización y DevOps (Docker, Jenkins, CI/CD)</li>
+                <li>Robótica con Arduino</li>
+                <li>Optimización energética y proyectos solares</li>
+                <li>Diseño y administración de redes</li>
+            </ul>
         </div>
 
         <div class="parrafo">
@@ -78,18 +73,23 @@
 
         <div class="parrafo">
             <h3><a href="contacto.html">Contacto</a></h3>
-            <p>📫 Puedes contactar conmigo mediante correo electrónico <a href="mailto:tatiana@villaema.es">tatiana@villaema.es</a></p>
+            <p>📫 Puedes contactarme a través de correo electrónico: <a href="mailto:tatiana@villaema.es">tatiana@villaema.es</a></p>
             <p>Puedes dejarme un mensaje en mi <a href="https://www.linkedin.com/in/tatvil/?tab">LinkedIn</a></p>
-            <p>Deja tus datos en el formulario de <a href="contacto.html">contacto</a></p>
+            <p>O rellena el formulario de <a href="contacto.html">contacto</a> para más información.</p>
         </div>
     </div>
 
-<footer>
-    <div class="footer">
-        <span id="copyright">
-			&copy; <span id="annoFooter"> </span>Tatiana Villa Ema
-		</span>
-    </div>
-</footer>
+    <footer>
+        <div class="footer">
+            <span id="copyright">
+                &copy; <span id="annoFooter"></span> Tatiana Villa Ema
+            </span>
+        </div>
+    </footer>
+
+    <script>
+        document.getElementById('annoFooter').textContent = new Date().getFullYear();
+    </script>
 </body>
+
 </html>
