Moviendo el cartel de pagina hecha con codigo al footer

--- a/contacto.html
+++ b/contacto.html
@@ -72,11 +72,10 @@
     </div>
 
     <footer class="footer mt-5 text-center">
-        <div>
+            <span>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</span>
             <span id="copyright">
                 &copy; <span id="annoFooter"></span> Tatiana Villa Ema
             </span>
-        </div>
     </footer>
 
     <!-- Scripts -->
