--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -135,6 +135,7 @@
 
 <footer>
     <div class="footer">
+        <span>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</span>
         <span id="copyright">
             &copy; <span id="annoFooter"></span> Tatiana Villa Ema
         </span>
