--- a/habilidades.html
+++ b/habilidades.html
@@ -37,10 +37,6 @@
             </ul>
         </div>
 
-        <div class="card">
-            <h6>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</h6>
-        </div>
-
         <div class="accordion mt-4" id="accordionExample">
             <div class="card">
                 <div class="card-header" id="headingOne">
@@ -81,6 +77,8 @@
 
     <footer>
         <div class="footer">
+            <span>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</span>
+            <br>
             <span id="copyright">
                 &copy; <span id="annoFooter"></span> Tatiana Villa Ema
             </span>
