--- a/proyectos.html
+++ b/proyectos.html
@@ -39,10 +39,6 @@
             </ul>
         </div>
 
-        <div class="card">
-            <h6>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</h6>
-        </div>
-
         <div class="accordion mt-4" id="accordionExample">
             <div class="card">
                 <div class="card-header" id="headingOne">
@@ -138,6 +134,7 @@
 
     <footer>
         <div class="footer">
+            <span>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</span>
             <span id="copyright">
                 &copy; <span id="annoFooter"></span> Tatiana Villa Ema
             </span>
