Resolucion de problemas con la visualizacion del Copyright

--- a/contacto.html
+++ b/contacto.html
@@ -30,6 +30,7 @@
     <div class="container text-center mt-5">
         <h1>Tatiana Villa</h1>
         <h2><small>Desarrolladora de Aplicaciones Multiplataforma</small></h2>
+        <div id="fecha">fecha</div>
         <div class="contact-links mt-3">
             <a href="mailto:tatiana@villaema.es" aria-label="Correo Electrónico"><i class="fas fa-envelope"></i> tatiana@villaema.es</a> |
             <a href="https://github.com/tatvil" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i> GitHub</a> | 
@@ -72,10 +73,10 @@
     </div>
 
     <footer class="footer mt-5 text-center">
-            <span>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</span>
-            <span id="copyright">
-                &copy; <span id="annoFooter"></span> Tatiana Villa Ema
-            </span>
+        <div class="footer">
+            <div>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</div>
+            <div id="copyright">copyright</div>
+        </div>
     </footer>
 
     <!-- Scripts -->
