--- a/habilidades.html
+++ b/habilidades.html
@@ -20,6 +20,7 @@
         <div class="text-center mt-5">
             <h1>Tatiana Villa</h1>
             <h2><small>Desarrollador de aplicaciones Multiplataforma</small></h2>
+            <div id="fecha">fecha</div>
             <div>
                 <a href="mailto:tatiana@villaema.es"><i class="fas fa-envelope"></i> tatiana@villaema.es</a> | 
                 <a href="https://github.com/tatvil"><i class="fab fa-github"></i> GitHub</a> | 
@@ -77,18 +78,13 @@
 
     <footer>
         <div class="footer">
-            <span>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</span>
-            <br>
-            <span id="copyright">
-                &copy; <span id="annoFooter"></span> Tatiana Villa Ema
-            </span>
+            <div class="footer">
+                <div>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</div>
+                <div id="copyright">copyright</div>
+            </div>
         </div>
     </footer>
 
-    <script>
-        // Actualizar el año en el footer
-        document.getElementById('annoFooter').textContent = new Date().getFullYear();
-    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
