--- a/proyectos.html
+++ b/proyectos.html
@@ -22,6 +22,7 @@
         <div class="text-center mt-5">
             <h1>Tatiana Villa</h1>
             <h2><small>Desarrollador de aplicaciones Multiplataforma</small></h2>
+            <div id="fecha">fecha</div>
             <div>
                 <a href="mailto:tatiana@villaema.es"><i class="fas fa-envelope"></i> tatiana@villaema.es</a> | 
                 <a href="https://github.com/tatvil"><i class="fab fa-github"></i> GitHub</a> | 
@@ -134,10 +135,10 @@
 
     <footer>
         <div class="footer">
-            <span>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</span>
-            <span id="copyright">
-                &copy; <span id="annoFooter"></span> Tatiana Villa Ema
-            </span>
+            <div class="footer">
+                <div>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</div>
+                <div id="copyright">copyright</div>
+            </div>
         </div>
     </footer>
 
