--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -12,6 +12,7 @@
     <meta name="description" content="Curriculum Vitae de Tatiana Villa, desarrolladora y diseñadora web.">
     <meta name="keywords" content="Tatiana Villa, curriculum, desarrolladora web, diseñadora web, tecnología, DAM">
     <meta name="author" content="Tatiana Villa">
+
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="codigo.js"></script>
 </head>
@@ -21,6 +22,7 @@
         <div class="text-center mt-5">
             <h1>Tatiana Villa - Sobre mi</h1>
             <h2><small>Sobre mi</small></h2>
+            <div id="fecha">fecha</div>
             <div>
                 <a href="mailto:tatiana@villaema.es"><i class="fas fa-envelope"></i> tatiana@villaema.es</a> | 
                 <a href="https://github.com/tatvil"><i class="fab fa-github"></i> GitHub</a> | 
@@ -135,19 +137,15 @@
 
 <footer>
     <div class="footer">
-        <span>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</span>
-        <span id="copyright">
-            &copy; <span id="annoFooter"></span> Tatiana Villa Ema
-        </span>
+        <div class="footer">
+            <div>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</div>
+            <div id="copyright">copyright</div>
+        </div>
     </div>
 </footer>
 
-    <script>
-        // Actualizar el año en el footer
-        document.getElementById('annoFooter').textContent = new Date().getFullYear();
-    </script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
