Muchas mejoras en todas las páginas

--- a/contacto.html
+++ b/contacto.html
@@ -6,13 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tatiana Villa - Desarrolladora de Aplicaciones Multiplataforma</title>
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <!-- FontAwesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Meta tags para SEO -->
@@ -27,28 +22,31 @@
     <script type="text/javascript" src="codigo.js"></script>
 </head>
 <body>
-    <div class="container text-center mt-5">
-        <h1>Tatiana Villa</h1>
-        <h2><small>Desarrolladora de Aplicaciones Multiplataforma</small></h2>
-        <div id="fecha">fecha</div>
-        <div class="contact-links mt-3">
-            <a href="mailto:tatiana@villaema.es" aria-label="Correo Electrónico"><i class="fas fa-envelope"></i> tatiana@villaema.es</a> |
-            <a href="https://github.com/tatvil" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i> GitHub</a> | 
-            <a href="https://www.linkedin.com/in/tatvil/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i> LinkedIn</a>
+    <div class="container">
+        <div class="text-center mt-5">
+            <div class="cabecera">
+                <h1>Tatiana Villa</h1>
+                <h2><small>Contacto</small></h2>
+                <div id="fecha">fecha</div>
+            </div>
+            <div class="contact-links mt-3">
+                <a href="mailto:tatiana@villaema.es"><i class="fas fa-envelope"></i> tatiana@villaema.es</a> | 
+                <a href="https://github.com/tatvil"><i class="fab fa-github"></i> GitHub</a> | 
+                <a href="https://www.linkedin.com/in/tatvil/"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            </div>
         </div>
-    </div>
 
-    <nav class="menu mt-5">
-        <ul class="nav justify-content-center">
-            <li class="nav-item"><a id="menu1" class="nav-link" href="index.html">Inicio</a></li>
-            <li class="nav-item"><a id="menu2" class="nav-link" href="sobre-mi.html">Sobre mí</a></li>
-            <li class="nav-item"><a id="menu3" class="nav-link" href="proyectos.html">Proyectos</a></li>
-            <li class="nav-item"><a id="menu4" class="nav-link" href="habilidades.html">Habilidades</a></li>
-            <li class="nav-item"><a id="menu5" class="nav-link" href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+        <div class="menu">
+            <ul>
+                <li><a id="menu1" href='index.html'>Inicio</a></li>
+                <li><a id="menu2" href="sobre-mi.html">Sobre mi</a></li>
+                <li><a id="menu3" href="proyectos.html">pepe</a></li>
+                <li><a id="menu4" href="curriculum.html">Curriculum</a></li>
+                <li><a id="menu5" href="contacto.html">Contacto</a></li>
+            </ul>
+        </div>
 
-    <div class="container cuerpo mt-4">
+        <div class="accordion mt-4" id="accordionExample">
         <section class="contacto">
             <div class="parrafo">
                 <h2>¡Ponte en contacto conmigo!</h2>
