--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
 <body>
     <div class="container">
         <div class="text-center mt-5">
-            <h1>Tatiana Villa</h1>
-            <h2><small>Desarrollador de aplicaciones Multiplataforma</small></h2>
-            <div id="fecha">fecha<div>
+            <div class="cabecera">
+                <h1>Tatiana Villa</h1>
+                <h2><small>Desarrolladora de aplicaciones Multiplataforma</small></h2>
+                <div id="fecha">fecha</div>
+            </div>
+            <div class="contact-links mt-3">
                 <a href="mailto:tatiana@villaema.es"><i class="fas fa-envelope"></i> tatiana@villaema.es</a> | 
                 <a href="https://github.com/tatvil"><i class="fab fa-github"></i> GitHub</a> | 
                 <a href="https://www.linkedin.com/in/tatvil/"><i class="fab fa-linkedin"></i> LinkedIn</a>
@@ -34,7 +37,7 @@
                 <li><a id="menu1" href='index.html'>Inicio</a></li>
                 <li><a id="menu2" href="sobre-mi.html">Sobre mi</a></li>
                 <li><a id="menu3" href="proyectos.html">pepe</a></li>
-                <li><a id="menu4" href="habilidades.html">Habilidades</a></li>
+                <li><a id="menu4" href="curriculum.html">Curriculum</a></li>
                 <li><a id="menu5" href="contacto.html">Contacto</a></li>
             </ul>
         </div>
@@ -130,7 +133,7 @@
 
     <footer>
         <div class="footer">
-            <div>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</div>
+            <div><small>Página realizada íntegramente con código: PHP, JavaScript, HTML y CSS</small></div>
             <div id="copyright">copyright</div>
         </div>
     </footer>
