--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -20,10 +20,12 @@
 <body>
     <div class="container">
         <div class="text-center mt-5">
-            <h1>Tatiana Villa - Sobre mi</h1>
-            <h2><small>Sobre mi</small></h2>
-            <div id="fecha">fecha</div>
-            <div>
+            <div class="cabecera">
+                <h1>Tatiana Villa</h1>
+                <h2><small>Sobre mi</small></h2>
+                <div id="fecha">fecha</div>
+            </div>
+            <div class="contact-links mt-3">
                 <a href="mailto:tatiana@villaema.es"><i class="fas fa-envelope"></i> tatiana@villaema.es</a> | 
                 <a href="https://github.com/tatvil"><i class="fab fa-github"></i> GitHub</a> | 
                 <a href="https://www.linkedin.com/in/tatvil/"><i class="fab fa-linkedin"></i> LinkedIn</a>
@@ -34,13 +36,13 @@
             <ul>
                 <li><a id="menu1" href='index.html'>Inicio</a></li>
                 <li><a id="menu2" href="sobre-mi.html">Sobre mi</a></li>
-                <li><a id="menu3" href="proyectos.html">Proyectos</a></li>
-                <li><a id="menu4" href="habilidades.html">Habilidades</a></li>
+                <li><a id="menu3" href="proyectos.html">pepe</a></li>
+                <li><a id="menu4" href="curriculum.html">Curriculum</a></li>
                 <li><a id="menu5" href="contacto.html">Contacto</a></li>
             </ul>
         </div>
 
-    <div class="accordion mt-4" id="accordionExample">
+        <div class="accordion mt-4" id="accordionExample">
         <div class="card">
             <div class="card-header" id="headingOne">
                 <h5 class="mb-0">
